IRR: Split App into App + Activator
Test: Self-tested
Bug: NA
Change-Id: I500b3c0c599c2556941e6b164223cc9f35c747f1